# klymene

./: .gitignore  Cargo.toml  flake.nix
klymene_srv/: Cargo.toml
klymene_srv/src/: main.rs  messages.rs
klymene_srv/src/slsk/: client.rs
klymene_srv/src/soulseek/: client.rs  mod.rs  protocol.rs
klymene_srv/srv_protocol/: Cargo.toml
klymene_srv/srv_protocol/src/: lib.rs
klymene_tui/: Cargo.toml
