[package]
name = "klymene"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = [
  "klymene_srv",
  "klymene_srv/srv_protocol",
  
  "klymene_tui",
]

# Service - handles Soulseek protocol, connections between the server and peers.
# Uses Unix socket to communicate with the client
[[bin]]
name = "klymene_srv"
path = "klymene_srv/src/main.rs"

# Soulseek protocol implementation as a library.
[lib]
name = "srv_protocol"
path = "klymene_srv/srv_protocol/src/lib.rs"
test = true

# Client - ratatui-based interface to interact with the service (search for files,
# download them, chat with peers etc.)
[[bin]]
name = "klymene_tui"
path = "klymene_tui/src/main.rs"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.0"
tokio = { version = "1.49.0", features = ["full"] }
